syntax = "proto3";

package Autobots.Infrastracture.LogCenter;

message LogRequest {
  string message = 1;
  string locator = 2;
  string operator = 3;
}

message LogResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service LogServiceDefinition {
  rpc Info(LogRequest) returns (LogResponse);
  rpc Warn(LogRequest) returns (LogResponse);
  rpc Error(LogRequest) returns (LogResponse);
}